force-app/main/default/objects/Lead/fields/Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Description__c</fullName>
    <label>EL_Account Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
<!-- Gitting -->
</CustomField>