force-app/main/default/objects/Lead/fields/Create_Project__c.field-meta.xml
<CustomField>
    <fullName>Create_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked a project will be created on lead conversion</inlineHelpText>
    <label>EL_Create Project</label>
    <type>Checkbox</type>
<!-- Gitting -->
</CustomField>