force-app/main/default/objects/Lead/fields/emailBody__c.field-meta.xml
<CustomField>
    <fullName>emailBody__c</fullName>
    <label>EmailBody</label>
    <length>32768</length>
    <type>LongTextArea</type>
<!-- Gitting -->
</CustomField>