force-app/main/default/objects/Lead/fields/Is_Lead_Created_From_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Created_From_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this Lead was created by the EmailToLead AI email service.</description>
    <label>Is Lead Created From Email</label>
    <type>Checkbox</type>
<!-- Gitting -->
</CustomField>