force-app/main/default/objects/Lead/fields/IsConverted__c.field-meta.xml
<CustomField>
    <fullName>IsConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EL_IsConverted</label>
    <type>Checkbox</type>
<!-- Gitting -->
</CustomField>