force-app/main/default/objects/Lead/fields/Project_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Address__c</fullName>
    <label>Project Street Address</label>
    <type>TextArea</type>
</CustomField>