force-app/main/default/objects/Lead/fields/Project_City__c.field-meta.xml
<CustomField>
    <fullName>Project_City__c</fullName>
    <label>EL_Project City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>