force-app/main/default/objects/Lead/fields/Project_Country__c.field-meta.xml
<CustomField>
    <fullName>Project_Country__c</fullName>
    <label>Project Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>