force-app/main/default/objects/Lead/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>EL_Project Name</label>
    <length>255</length>
    <type>Text</type>
<!-- Gitting -->
</CustomField>