force-app/main/default/objects/Lead/fields/Project_State__c.field-meta.xml
<CustomField>
    <fullName>Project_State__c</fullName>
    <label>EL_Project State</label>
    <length>2</length>
    <type>Text</type>
<!-- Gitting -->
</CustomField>