force-app/main/default/objects/Lead/fields/Project_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Zip_Code__c</fullName>
    <label>Project Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>