force-app/main/default/objects/Lead/fields/Sub_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Account_Type__c</fullName>
    <label>EL_Sub Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified Installer</fullName>
            </value>
            <value>
                <fullName>Church/Religious Group</fullName>
            </value>
            <value>
                <fullName>College/University</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Daycare/Preschool</fullName>
            </value>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>Head Start</fullName>
            </value>
            <value>
                <fullName>Housing/HOA/Property Management</fullName>
            </value>
            <value>
                <fullName>Manufacture</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Public Agency</fullName>
            </value>
            <value>
                <fullName>Park &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>Playground Contractor</fullName>
            </value>
            <value>
                <fullName>Private School</fullName>
            </value>
            <value>
                <fullName>Public School District</fullName>
            </value>
            <value>
                <fullName>Residential Developer</fullName>
            </value>
            <value>
                <fullName>Sale Rep Agency</fullName>
            </value>
            <value>
                <fullName>Landscape Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
<!-- Gitting -->
</CustomField>