force-app/main/default/objects/Lead/fields/summary__c.field-meta.xml
<CustomField>
    <fullName>summary__c</fullName>
    <label>EL_summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
<!-- Gitting -->
</CustomField>