force-app/main/default/objects/Lead/fields/Website_Form_Message__c.field-meta.xml
<CustomField>
    <fullName>Website_Form_Message__c</fullName>
    <description>Created by CPS and used in Web-to-Lead forms on coastrecreation.com contact us website form.</description>
    <label>EL_Website Form Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>