force-app/main/default/objects/Lead/validationRules/Project_Name_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Name_required</fullName>
    <active>false</active>
    <description>Project name required prior Lead is converted</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status , &apos;Converted&apos;),
ISBLANK( Project_Name__c ),
Create_Project__c = TRUE
)</errorConditionFormula>
    <errorMessage>Project Name is required in order to convert the Lead</errorMessage>
</ValidationRule>