force-app/main/default/objects/Lead/validationRules/Required_Fields_Before_Lead_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_Before_Lead_Conversion</fullName>
    <active>true</active>
    <description>This is the validation rule to ensure that all Project and Contact related fields are populated before the lead is converted, condition being; if a Project is to be created after the lead conversion.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(Status, &apos;Converted&apos;),
				Create_Project__c = TRUE,
				OR(
								ISBLANK(Project_Name__c),
								ISBLANK(Project_Address__c),
								ISBLANK(Project_City__c),
								ISBLANK(Project_State__c),
								ISBLANK(Project_Zip_Code__c),
								ISBLANK(Email),
								ISBLANK(MobilePhone)								)
)</errorConditionFormula>
    <errorMessage>Please fill all fields under Project and Contact Information.</errorMessage>
<!-- Gitting -->
</ValidationRule>